# AdvCompilerOptimizations

BoundChecking/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
BoundChecking/BoundsCheckInsertion/: BoundsCheckInsert.cpp  CMakeLists.txt  Makefile  array_init_inserted.bc  cmake_install.cmake
BoundChecking/BoundsCheckRemoval/: .array_init_removed.ll.swp  BoundsCheckRemoval.cpp  CMakeLists.txt  Makefile  cmake_install.cmake
BoundsCheckInsertion/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
BoundsCheckInsertion/BoundsCheckInsertion/: .Newpass.cpp.swp  BoundsCheckInsert.cpp  Makefile  cmake_install.cmake
tests/: .array_init.ll.swp  .array_malloc.ll.swp  array_1.bc  array_1.c  array_1.ll  array_init.bc  array_init.c  array_init.ll  array_malloc.bc  array_malloc.c  array_malloc.ll
